--- a/project1/index.html
+++ b/project1/index.html
@@ -12,15 +12,15 @@
 			<nav class="main-nav">
 				<span id="menu-trigger" class="main-nav__hamburger"></span>
 				<ul class="main-nav__list">
-					<li class="main-nav__item"><a href="" class="main-nav__link"></a></li>
-					<li class="main-nav__item"><a href="" class="main-nav__link"></a></li>
-					<li class="main-nav__item"><a href="" class="main-nav__link"></a></li>
-					<li class="main-nav__item"><a href="" class="main-nav__link"></a></li>
-					<li class="main-nav__item"><a href="" class="main-nav__link"></a></li>
+					<li class="main-nav__item"><a href="" class="main-nav__link">Номера</a></li>
+					<li class="main-nav__item"><a href="" class="main-nav__link">Коттедж</a></li>
+					<li class="main-nav__item"><a href="" class="main-nav__link">Ресторан</a></li>
+					<li class="main-nav__item"><a href="" class="main-nav__link">Отдых</a></li>
+					<li class="main-nav__item"><a href="" class="main-nav__link">Контакты</a></li>
 				</ul>
 			</nav>
-			<div class="page-header__contacts"><strong></strong></div>
-			<a href="" class="btn btn--icon-calendar"></a>
+			<div class="page-header__contacts"><strong>+7 812 777-55-88</strong>г. Санкт-Петербург, Приморское ш.600</div>
+			<a href="" class="btn btn--icon-calendar">Забронировать</a>
 		</div>
 	</header>
 
@@ -28,35 +28,35 @@
 		<div class="promo__wrapper-slides">
 			<div class="promo__slide" style="background-image: url('')">
 				<div class="promo__slide-inner">
-					<h1 class="promo__slide-title"></h1>
-					<p class="promo__slide-text"></p>
+					<h1 class="promo__slide-title">Семейный отдых на  берегу Финского залива</h1>
+					<p class="promo__slide-text">Green Valley - это современная база отдыха</p>
 				</div>
 			</div>
 			<div class="promo__slide" style="background-image: url('')">
 				<div class="promo__slide-inner">
-					<h1 class="promo__slide-title"></h1>
-					<p class="promo__slide-text"></p>
+					<h1 class="promo__slide-title">Семейный отдых на  берегу Финского залива</h1>
+					<p class="promo__slide-text">в курортном районе для здорового отдыха всей семёй.</p>
 				</div>
 			</div>
 			<ul class="promo__slider-tabs">
-				<li class="promo__tab  promo__tab--active"><a href=""></a></li>
-				<li class="promo__tab"><a href=""></a></li>
+				<li class="promo__tab  promo__tab--active"><a href="">Семейный отдых</a></li>
+				<li class="promo__tab"><a href="">Корпоративный</a></li>
 			</ul>
 		</div>
 	</section>
 
 	<section class="relax">
-		<h1 class="__title"></h1>
+		<h1 class="__title">Здоровый отдых</h1>
 		<div class="relax__wrapper-text">
-			<p></p>
+			<p>Плавайте в бассейне, играйте в волейбол, футбол и другие игры. Устройте семейный пикник с шашлыками или снимите напряжение в бане или спа. Почувствуйте отдых!</p>
 		</div>
 		<ul class="relax__features">
-			<li style="background-image:url('')"></li>
-			<li style="background-image:url('')"></li>
-			<li style="background-image:url('')"></li>
-			<li style="background-image:url('')"></li>
-			<li style="background-image:url('')"></li>
-			<li style="background-image:url('')"></li>
+			<li style="background-image:url('')">Бассейн</li>
+			<li style="background-image:url('')">Спортивная площадка</li>
+			<li style="background-image:url('')">Бильярд</li>
+			<li style="background-image:url('')">СПА</li>
+			<li style="background-image:url('')">Бани</li>
+			<li style="background-image:url('')">Анимация</li>
 		</ul>
 	</section>
 
@@ -64,17 +64,17 @@
 
 	<section class="review">
 		<div class="review__inner">
-			<h1 class="review__title"></h1>
+			<h1 class="review__title">Отзывы</h1>
 			<div class="review__carousel">
 				<div class="review__slide">
 					<div class="review__author">
 						<img src="" alt="">Екатерина В.
 						<div class="review__social-links">
 							<a href=""></a>
-							<p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Агенство рукописи использовало моей то, которое там, страну над меня языкового? Все текста назад жизни, но предупредила агенство, встретил коварных!</p>
+							<p>Наша семья счастлива, что открыла для себя Green Valley. Замечательный, комфортный отдых. Хорошее место, приветливый персонал, вкусная еда. Стали постоянными гостями!</p>
 							<footer class="review__slide-footer">
 								<div class="date">
-									Дата отдыха:<br>
+									Дата отдыха:<br>15.05.2015 - 20.05.2015
 								</div>
 							</footer>
 						</div>
@@ -85,10 +85,10 @@
 						<img src="" alt="">Екатерина В.
 						<div class="review__social-links">
 							<a href=""></a>
-							<p>Даже раз всеми рыбными лучше текста буквенных залетают рукописи заголовок ручеек диких речью над составитель единственное своего, маленький букв несколько о правилами рекламных но? Проектах которое оксмокс вопроса, текстов которой.</p>
+							<p>Спасибо всем без исключения сотрудникам отеля за прекрасные дни, проведённые у вас! Наслаждались тишиной, отдохнули прекрасно. Понравилось всё: тёплый приём персоналом.</p>
 							<footer class="review__slide-footer">
 								<div class="date">
-									Дата отдыха:<br>
+									Дата отдыха:<br>01.06.2015 - 08.06.2015
 								</div>
 							</footer>
 						</div>
@@ -100,18 +100,18 @@
 	</section>
 
 	<section class="offers">
-		<h1 class="offers__title"></h1>
+		<h1 class="offers__title">Акции и предложения</h1>
 		<div class="offers__wrapper-slider">
 			<div class="offers__slide" style="background-image:url('');">
 				<div class="offers__slide-description">
-					<h2></h2>
-					<p></p>
+					<h2>Скидки в мае</h2>
+					<p>Забронируйте номер или коттедж любой категории до 31 июня и получите скидку 10% !</p>
 				</div>
 			</div>
 			<div class="offers__slide" style="background-image:url('');">
 				<div class="offers__slide-description">
-					<h2></h2>
-					<p></p>
+					<h2>Скидки в мае</h2>
+					<p><Забронируйте номер или коттедж любой категории до 31 июня и получите скидку 10% !/p>
 				</div>
 			</div>
 			<div class="offers__dots">
@@ -123,16 +123,19 @@
 
 	<section class="location">
 		<div class="location__inner">
-			<h1 class="location__title"></h1>
+			<h1 class="location__title">Как до нас добраться</h1>
 			<div class="location__map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1983.3129967463035!2d29.63812701610734!3d60.192102881969035!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x469655a8f7aaa509%3A0x4571dd0a1f950e95!2z0J_RgNC40LzQvtGA0YHQutC-0LUg0YguLCA2MDAsINCzLiDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTk5MDA0!5e0!3m2!1sru!2sru!4v1453324512974" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe></div>
 			<div class="location__transport">
 				<div class="location__bus">
-					<h2 class="__transport-title"></h2>
-					<p class="__transport-text"></p>
+					<h2 class="__transport-title">Автобусы</h2>
+					<p class="__transport-text">№ 211 от станции метро «Черная речка» до остановки «Санаторий Репино»<br>
+					№ 305К от станции метро «Старая деревня»<br>
+					№ 680К от станции метро «Проспект Просвещения»<br>
+					№ 400К от станции метро «Площадь Ленина»</p>
 				</div>
 				<div class="location__train">
-					<h2 class="__transport-title"></h2>
-					<p class="__transport-text"></p>
+					<h2 class="__transport-title">Электропоезд</h2>
+					<p class="__transport-text">Электропоезд Выборгского направления от Финляндского вокзала Санкт-Петербурга до платформы «Репино»</p>
 				</div>
 			</div>
 		</div>
@@ -140,21 +143,21 @@
 
 	<section class="placement">
 		<div class="placement__inner">
-			<h1 class="placement__title"></h1>
+			<h1 class="placement__title">Где вы хотите отдохнуть?</h1>
 			<div class="placement__card">
 				<img src="" alt="" class="placement__card-images">
-				<div class="placement__card-text"><strong></strong><span></span></div>
+				<div class="placement__card-text"><strong>В отеле</strong>от <span>4000</span> руб./сутки</div>
 			</div>
 			<div class="placement__card">
 				<img src="" alt="" class="placement__card-images">
-				<div class="placement__card-text"><strong></strong><span></span></div>
+				<div class="placement__card-text"><strong>В коттедже</strong>от <span>6800</span> руб./сутки</div>
 			</div>
 		</div>
 	</section>
 
 	<footer class="page-footer">
 		<div class="page-footer__inner">
-			<div class="page-footer__address"></div>
+			<div class="page-footer__address">г. Санкт-Петербург,<br>Приморское ш.600</div>
 			<div class="page-footer__logo-socials">
 				<div class="page-footer__logo"></div>
 				<ul class="page-footer__socials">
@@ -163,7 +166,7 @@
 					<li class="page-footer__social-item"><a href="" class="page-footer__social-link  page-footer__social-link--fb-icon"></a></li>
 				</ul>
 			</div>
-			<div class="page-footer__contacts"></div>
+			<div class="page-footer__contacts">+7 812 777-55-88<br><a href="mailto:info@greenvalley.ru">info@greenvalley.ru</a></div>
 		</div>
 	</footer>
 
