--- a/project1/room_list.html
+++ b/project1/room_list.html
@@ -6,5 +6,86 @@
 </head>
 <body>
 
+	<header class="page-header">
+		<div class="page-header__inner">
+			<a href="" class="logo"><img src="" alt=""></a>
+			<nav class="main-nav">
+				<span id="menu-trigger" class="main-nav__hamburger"></span>
+				<ul class="main-nav__list">
+					<li class="main-nav__item"><a href="" class="main-nav__link">Номера</a></li>
+					<li class="main-nav__item"><a href="" class="main-nav__link">Коттедж</a></li>
+					<li class="main-nav__item"><a href="" class="main-nav__link">Ресторан</a></li>
+					<li class="main-nav__item"><a href="" class="main-nav__link">Отдых</a></li>
+					<li class="main-nav__item"><a href="" class="main-nav__link">Контакты</a></li>
+				</ul>
+			</nav>
+			<div class="page-header__contacts"><strong>+7 812 777-55-88</strong>г. Санкт-Петербург, Приморское ш.600</div>
+			<a href="" class="btn btn--icon-calendar">Забронировать</a>
+		</div>
+	</header>
+
+	<section class="room-list-promo">
+		<div class="room-list-promo__inner">
+			<h1 class="room-list-promo__title">Номера в отеле Green Valley</h1>
+			<p class="room-list-promo__text">Комфорт и живописный вид на Финский залив и сосновый парк.</p>
+			<p class="room-list-promo__text">4 этажа | 70 номеров</p>
+		</div>
+	</section>
+
+	<section class="room-list-category">
+		<h1 class="room-list-category__title">Категории</h1>
+		<section class="room-list-item">
+			<div class="room-list-item__content">
+				<h2 class="room-list-item__title"><strong>Эконом</strong><span>3400</span></h2>
+				<p>В отеле 30 таких номеров площадью от 16 до 20 кв.м. Рассчитаны на проживание 1-2 человек. Часть номеров с видом на Финский залив.</p>
+				<a href="" class="btn">Забронировать</a>
+				<a href="" class="btn btn--more">Подробнее</a>
+			</div>
+			<img src="" alt="">
+		</section>
+		<section class="room-list-item">
+			<div class="room-list-item__content">
+				<h2 class="room-list-item__title"><strong>Эконом</strong><span>3400</span></h2>
+				<p>В отеле 30 таких номеров площадью от 16 до 20 кв.м. Рассчитаны на проживание 1-2 человек. Часть номеров с видом на Финский залив.</p>
+				<a href="" class="btn">Забронировать</a>
+				<a href="" class="btn btn--more">Подробнее</a>
+			</div>
+			<img src="" alt="">
+		</section>
+		<section class="room-list-item">
+			<div class="room-list-item__content">
+				<h2 class="room-list-item__title"><strong>Эконом</strong><span>3400</span></h2>
+				<p>В отеле 30 таких номеров площадью от 16 до 20 кв.м. Рассчитаны на проживание 1-2 человек. Часть номеров с видом на Финский залив.</p>
+				<a href="" class="btn">Забронировать</a>
+				<a href="" class="btn btn--more">Подробнее</a>
+			</div>
+			<img src="" alt="">
+		</section>
+		<section class="room-list-item">
+			<div class="room-list-item__content">
+				<h2 class="room-list-item__title"><strong>Эконом</strong><span>3400</span></h2>
+				<p>В отеле 30 таких номеров площадью от 16 до 20 кв.м. Рассчитаны на проживание 1-2 человек. Часть номеров с видом на Финский залив.</p>
+				<a href="" class="btn">Забронировать</a>
+				<a href="" class="btn btn--more">Подробнее</a>
+			</div>
+			<img src="" alt="">
+		</section>
+	</section>
+
+	<footer class="page-footer">
+		<div class="page-footer__inner">
+			<div class="page-footer__address">г. Санкт-Петербург,<br>Приморское ш.600</div>
+			<div class="page-footer__logo-socials">
+				<div class="page-footer__logo"></div>
+				<ul class="page-footer__socials">
+					<li class="page-footer__social-item"><a href="" class="page-footer__social-link  page-footer__social-link--vk-icon"></a></li>
+					<li class="page-footer__social-item"><a href="" class="page-footer__social-link  page-footer__social-link--inst-icon"></a></li>
+					<li class="page-footer__social-item"><a href="" class="page-footer__social-link  page-footer__social-link--fb-icon"></a></li>
+				</ul>
+			</div>
+			<div class="page-footer__contacts">+7 812 777-55-88<br><a href="mailto:info@greenvalley.ru">info@greenvalley.ru</a></div>
+		</div>
+	</footer>
+
 </body>
 </html>
