promo slider mobile

--- a/src/index.html
+++ b/src/index.html
@@ -10,41 +10,43 @@
 
 	<header class="page-header">
 		<div class="page-header__inner container">
-			<a href="#" class="logo col-xs-12 col-md-2"><img src="img/logo.png"></a>
-			<nav class="main-nav col-md-5">
-				<span id="menu-trigger" class="main-nav__hamburger visible-xs visible-sm"></span>
-				<ul class="main-nav__list hidden-xs hidden-sm">
-					<li class="main-nav__item"><a href="" class="main-nav__link">Номера</a></li>
-					<li class="main-nav__item"><a href="" class="main-nav__link">Коттедж</a></li>
-					<li class="main-nav__item"><a href="" class="main-nav__link">Ресторан</a></li>
-					<li class="main-nav__item"><a href="" class="main-nav__link">Отдых</a></li>
-					<li class="main-nav__item"><a href="" class="main-nav__link">Контакты</a></li>
-				</ul>
-			</nav>
-			<div class="page-header__contacts hidden-xs hidden-sm col-md-3"><strong>+7 812 777-55-88</strong><small>г. Санкт-Петербург, Приморское ш.600</small></div>
-			<a href="#" class="btn btn--calendar-icon hidden-xs hidden-sm col-md-2">Забронировать</a>
+			<div class="row">
+				<a href="#" class="logo col-xs-12 col-md-2"><img src="img/logo.png"></a>
+				<nav class="main-nav col-md-5">
+					<span id="menu-trigger" class="main-nav__hamburger visible-xs visible-sm"></span>
+					<ul class="main-nav__list hidden-xs hidden-sm">
+						<li class="main-nav__item"><a href="" class="main-nav__link">Номера</a></li>
+						<li class="main-nav__item"><a href="" class="main-nav__link">Коттедж</a></li>
+						<li class="main-nav__item"><a href="" class="main-nav__link">Ресторан</a></li>
+						<li class="main-nav__item"><a href="" class="main-nav__link">Отдых</a></li>
+						<li class="main-nav__item"><a href="" class="main-nav__link">Контакты</a></li>
+					</ul>
+				</nav>
+				<div class="page-header__contacts hidden-xs hidden-sm col-md-3"><strong>+7 812 777-55-88</strong><small>г. Санкт-Петербург, Приморское ш.600</small></div>
+				<a href="#" class="btn btn--calendar-icon hidden-xs hidden-sm col-md-2">Забронировать</a>
+			</div>
 		</div>
 	</header>
 
 	<section class="promo">
 		<div class="promo__wrapper-slides">
-			<div class="promo__slide" style="background-image: url('')">
-				<div class="promo__slide-inner">
+			<div class="promo__slide" style="background-image: url('img/promo-slide-1.jpg')">
+				<div class="promo__slide-inner container">
 					<h1 class="promo__slide-title">Семейный отдых на  берегу Финского залива</h1>
-					<p class="promo__slide-text">Green Valley - это современная база отдыха</p>
+					<p class="promo__slide-text">Green Valley - это современная база отдыха в курортном районе для здорового отдыха всей семёй.</p>
 				</div>
 			</div>
-			<div class="promo__slide" style="background-image: url('')">
+			<!-- <div class="promo__slide" style="background-image: url('')">
 				<div class="promo__slide-inner">
 					<h1 class="promo__slide-title">Семейный отдых на  берегу Финского залива</h1>
 					<p class="promo__slide-text">в курортном районе для здорового отдыха всей семёй.</p>
 				</div>
-			</div>
-			<ul class="promo__slider-tabs">
-				<li class="promo__tab  promo__tab--active"><a href="">Семейный отдых</a></li>
-				<li class="promo__tab"><a href="">Корпоративный</a></li>
-			</ul>
+			</div> -->
 		</div>
+		<ul class="promo__slider-tabs">
+			<li class="promo__tab  promo__tab--active"><a href="#">Семейный отдых</a></li>
+			<li class="promo__tab"><a href="#">Корпоративный</a></li>
+		</ul>
 	</section>
 
 	<section class="relax">
