promo slider tablet and desctop

--- a/src/index.html
+++ b/src/index.html
@@ -32,8 +32,8 @@
 		<div class="promo__wrapper-slides">
 			<div class="promo__slide" style="background-image: url('img/promo-slide-1.jpg')">
 				<div class="promo__slide-inner container">
-					<h1 class="promo__slide-title">Семейный отдых на  берегу Финского залива</h1>
-					<p class="promo__slide-text">Green Valley - это современная база отдыха в курортном районе для здорового отдыха всей семёй.</p>
+					<h1 class="promo__slide-title"><span>Семейный отдых на  берегу<br>Финского залива</span></h1>
+					<p class="promo__slide-text"><span>Green Valley - это современная база отдыха <br>в курортном районе для здорового отдыха всей семёй.</span></p>
 				</div>
 			</div>
 			<!-- <div class="promo__slide" style="background-image: url('')">
