relax block mobile

--- a/src/index.html
+++ b/src/index.html
@@ -49,18 +49,18 @@
 		</ul>
 	</section>
 
-	<section class="relax">
-		<h1 class="__title">Здоровый отдых</h1>
+	<section class="relax container">
+		<h1 class="relax__title">Здоровый отдых</h1>
 		<div class="relax__wrapper-text">
 			<p>Плавайте в бассейне, играйте в волейбол, футбол и другие игры. Устройте семейный пикник с шашлыками или снимите напряжение в бане или спа. Почувствуйте отдых!</p>
 		</div>
-		<ul class="relax__features">
-			<li style="background-image:url('')">Бассейн</li>
-			<li style="background-image:url('')">Спортивная площадка</li>
-			<li style="background-image:url('')">Бильярд</li>
-			<li style="background-image:url('')">СПА</li>
-			<li style="background-image:url('')">Бани</li>
-			<li style="background-image:url('')">Анимация</li>
+		<ul class="relax__features hidden-xs">
+			<li style="background-image:url('img/relax-features-1.png')">Бассейн</li>
+			<li style="background-image:url('img/relax-features-2.png')">Спортивная площадка</li>
+			<li style="background-image:url('img/relax-features-3.png')">Бильярд</li>
+			<li style="background-image:url('img/relax-features-4.png')">СПА</li>
+			<li style="background-image:url('img/relax-features-5.png')">Бани</li>
+			<li style="background-image:url('img/relax-features-6.png')">Анимация</li>
 		</ul>
 	</section>
 
