relax block tablet and desctop

--- a/src/index.html
+++ b/src/index.html
@@ -55,12 +55,12 @@
 			<p>Плавайте в бассейне, играйте в волейбол, футбол и другие игры. Устройте семейный пикник с шашлыками или снимите напряжение в бане или спа. Почувствуйте отдых!</p>
 		</div>
 		<ul class="relax__features hidden-xs">
-			<li style="background-image:url('img/relax-features-1.png')">Бассейн</li>
-			<li style="background-image:url('img/relax-features-2.png')">Спортивная площадка</li>
-			<li style="background-image:url('img/relax-features-3.png')">Бильярд</li>
-			<li style="background-image:url('img/relax-features-4.png')">СПА</li>
-			<li style="background-image:url('img/relax-features-5.png')">Бани</li>
-			<li style="background-image:url('img/relax-features-6.png')">Анимация</li>
+			<li><img src="img/relax-features-1.png">Бассейн</li>
+			<li><img src="img/relax-features-2.png">Спортивная площадка</li>
+			<li><img src="img/relax-features-3.png">Бильярд</li>
+			<li><img src="img/relax-features-4.png">СПА</li>
+			<li><img src="img/relax-features-5.png">Бани</li>
+			<li><img src="img/relax-features-6.png">Анимация</li>
 		</ul>
 	</section>
 
