review block mobile

--- a/src/index.html
+++ b/src/index.html
@@ -67,35 +67,31 @@
 	<section class="gallery"></section>
 
 	<section class="review">
-		<div class="review__inner">
+		<div class="review__inner container">
 			<h1 class="review__title">Отзывы</h1>
-			<div class="review__carousel">
+			<div class="review__carousel row">
 				<div class="review__slide">
-					<div class="review__author">
-						<img src="" alt="">Екатерина В.
+					<div class="review__author col-xs-12">
+						<img src="img/review-1.jpg">Екатерина В.
 						<div class="review__social-links">
-							<a href=""></a>
-							<p>Наша семья счастлива, что открыла для себя Green Valley. Замечательный, комфортный отдых. Хорошее место, приветливый персонал, вкусная еда. Стали постоянными гостями!</p>
-							<footer class="review__slide-footer">
-								<div class="date">
-									Дата отдыха:<br>15.05.2015 - 20.05.2015
-								</div>
-							</footer>
+							<a href="#" class="review__social-links--vk"></a>
 						</div>
+						<p>Наша семья счастлива, что открыла для себя Green Valley. Замечательный, комфортный отдых. Хорошее место, приветливый персонал, вкусная еда. Стали постоянными гостями!</p>
+						<footer class="review__slide-footer">
+							Дата отдыха:<br>15.05.2015 - 20.05.2015
+						</footer>
 					</div>
 				</div>
-				<div class="review__slide">
-					<div class="review__author">
-						<img src="" alt="">Екатерина В.
+				<div class="review__slide row">
+					<div class="review__author col-xs-12">
+						<img src="img/review-2.jpg">Екатерина В.
 						<div class="review__social-links">
-							<a href=""></a>
-							<p>Спасибо всем без исключения сотрудникам отеля за прекрасные дни, проведённые у вас! Наслаждались тишиной, отдохнули прекрасно. Понравилось всё: тёплый приём персоналом.</p>
-							<footer class="review__slide-footer">
-								<div class="date">
-									Дата отдыха:<br>01.06.2015 - 08.06.2015
-								</div>
-							</footer>
+							<a href="#" class="review__social-links--fb"></a>
 						</div>
+						<p>Спасибо всем без исключения сотрудникам отеля за прекрасные дни, проведённые у вас! Наслаждались тишиной, отдохнули прекрасно. Понравилось всё: тёплый приём персоналом.</p>
+						<footer class="review__slide-footer">
+							Дата отдыха:<br>01.06.2015 - 08.06.2015
+						</footer>
 					</div>
 				</div>
 				<a href="" class="btn btn--bordered">Все отзывы</a>
