review block all media queries and add btn--bordered

--- a/src/index.html
+++ b/src/index.html
@@ -70,8 +70,8 @@
 		<div class="review__inner container">
 			<h1 class="review__title">Отзывы</h1>
 			<div class="review__carousel row">
-				<div class="review__slide">
-					<div class="review__author col-xs-12">
+				<div class="review__slide col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-0">
+					<div class="review__author">
 						<img src="img/review-1.jpg">Екатерина В.
 						<div class="review__social-links">
 							<a href="#" class="review__social-links--vk"></a>
@@ -82,8 +82,8 @@
 						</footer>
 					</div>
 				</div>
-				<div class="review__slide row">
-					<div class="review__author col-xs-12">
+				<div class="review__slide col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-0">
+					<div class="review__author">
 						<img src="img/review-2.jpg">Екатерина В.
 						<div class="review__social-links">
 							<a href="#" class="review__social-links--fb"></a>
@@ -94,7 +94,7 @@
 						</footer>
 					</div>
 				</div>
-				<a href="" class="btn btn--bordered">Все отзывы</a>
+				<div class="review__btn col-xs-12"><a href="" class="btn btn--bordered">Все отзывы</a></div>
 			</div>
 		</div>
 	</section>
