--- a/src/index.html
+++ b/src/index.html
@@ -99,24 +99,26 @@
 		</div>
 	</section>
 
-	<section class="offers">
+	<section class="offers container">
 		<h1 class="offers__title">Акции и предложения</h1>
-		<div class="offers__wrapper-slider">
-			<div class="offers__slide" style="background-image:url('');">
-				<div class="offers__slide-description">
-					<h2>Скидки в мае</h2>
-					<p>Забронируйте номер или коттедж любой категории до 31 июня и получите скидку 10% !</p>
+		<div class="offers__wrapper-slider row">
+			<div class="offers__sliders">
+				<div class="offers__slide" style="background-image:url('img/offers-slide-1.jpg');">
+					<div class="offers__slide-description">
+						<h2>Скидки в мае</h2>
+						<p>Забронируйте номер или коттедж любой категории до 31 июня и получите скидку 10% !</p>
+					</div>
 				</div>
-			</div>
-			<div class="offers__slide" style="background-image:url('');">
-				<div class="offers__slide-description">
-					<h2>Скидки в мае</h2>
-					<p><Забронируйте номер или коттедж любой категории до 31 июня и получите скидку 10% !/p>
-				</div>
+				<!-- <div class="offers__slide" style="background-image:url('');">
+					<div class="offers__slide-description">
+						<h2>Скидки в мае</h2>
+						<p><Забронируйте номер или коттедж любой категории до 31 июня и получите скидку 10% !/p>
+					</div>
+				</div> -->
 			</div>
 			<div class="offers__dots">
-				<a href="" class="offers__dot offers__dots  offers__dot--active"></a>
-				<a href="" class="offers__dot"></a>
+				<a href="#" class="offers__dot offers__dots  offers__dot--active"></a>
+				<a href="#" class="offers__dot"></a>
 			</div>
 		</div>
 	</section>
