location all done, update type.less

--- a/src/index.html
+++ b/src/index.html
@@ -123,21 +123,21 @@
 		</div>
 	</section>
 
-	<section class="location">
-		<div class="location__inner">
+	<section class="location container">
+		<div class="location__inner row">
 			<h1 class="location__title">Как до нас добраться</h1>
-			<div class="location__map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1983.3129967463035!2d29.63812701610734!3d60.192102881969035!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x469655a8f7aaa509%3A0x4571dd0a1f950e95!2z0J_RgNC40LzQvtGA0YHQutC-0LUg0YguLCA2MDAsINCzLiDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTk5MDA0!5e0!3m2!1sru!2sru!4v1453324512974" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe></div>
+			<div class="location__map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1983.3129967463035!2d29.63812701610734!3d60.192102881969035!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x469655a8f7aaa509%3A0x4571dd0a1f950e95!2z0J_RgNC40LzQvtGA0YHQutC-0LUg0YguLCA2MDAsINCzLiDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTk5MDA0!5e0!3m2!1sru!2sru!4v1453324512974" frameborder="0" style="border:0" allowfullscreen></iframe></div>
 			<div class="location__transport">
-				<div class="location__bus">
-					<h2 class="__transport-title">Автобусы</h2>
-					<p class="__transport-text">№ 211 от станции метро «Черная речка» до остановки «Санаторий Репино»<br>
-					№ 305К от станции метро «Старая деревня»<br>
-					№ 680К от станции метро «Проспект Просвещения»<br>
-					№ 400К от станции метро «Площадь Ленина»</p>
+				<div class="location__bus col-xs-12 col-sm-10 col-sm-offset-1 col-md-5">
+					<h2 class="location__transport-title">Автобусы</h2>
+					<p class="location__transport-text"><strong>№ 211</strong> от станции метро «Черная речка» до остановки «Санаторий Репино»<br>
+					<strong>№ 305К</strong> от станции метро «Старая деревня»<br>
+					<strong>№ 680К</strong> от станции метро «Проспект Просвещения»<br>
+					<strong>№ 400К</strong> от станции метро «Площадь Ленина»</p>
 				</div>
-				<div class="location__train">
-					<h2 class="__transport-title">Электропоезд</h2>
-					<p class="__transport-text">Электропоезд Выборгского направления от Финляндского вокзала Санкт-Петербурга до платформы «Репино»</p>
+				<div class="location__train col-xs-12 col-sm-10 col-sm-offset-1 col-md-5 col-md-offset-0">
+					<h2 class="location__transport-title">Электропоезд</h2>
+					<p class="location__transport-text">Электропоезд Выборгского направления от Финляндского вокзала Санкт-Петербурга до платформы «Репино»</p>
 				</div>
 			</div>
 		</div>
