placement all done

--- a/src/index.html
+++ b/src/index.html
@@ -144,15 +144,21 @@
 	</section>
 
 	<section class="placement">
-		<div class="placement__inner">
-			<h1 class="placement__title">Где вы хотите отдохнуть?</h1>
-			<div class="placement__card">
-				<img src="" alt="" class="placement__card-images">
-				<div class="placement__card-text"><strong>В отеле</strong>от <span>4000</span> руб./сутки</div>
-			</div>
-			<div class="placement__card">
-				<img src="" alt="" class="placement__card-images">
-				<div class="placement__card-text"><strong>В коттедже</strong>от <span>6800</span> руб./сутки</div>
+		<div class="placement__inner container">
+			<div class="row">
+				<h1 class="placement__title">Где вы хотите отдохнуть?</h1>
+				<div class="col-xs-12 col-sm-6 col-md-4 col-md-offset-2">
+					<div class="placement__card">
+						<img src="img/placement-hotel.jpg" class="placement__card-images">
+						<div class="placement__card-text"><strong>В отеле</strong>от <span>4000</span> руб./сутки</div>
+					</div>
+				</div>
+				<div class="col-xs-12 col-sm-6 col-md-4">
+					<div class="placement__card">
+						<img src="img/placement-cottage.jpg" class="placement__card-images">
+						<div class="placement__card-text"><strong>В коттедже</strong>от <span>6800</span> руб./сутки</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
