--- a/src/index.html
+++ b/src/index.html
@@ -163,18 +163,18 @@
 		</div>
 	</section>
 
-	<footer class="page-footer">
-		<div class="page-footer__inner">
-			<div class="page-footer__address">г. Санкт-Петербург,<br>Приморское ш.600</div>
-			<div class="page-footer__logo-socials">
-				<a href="" class="logo"><img src="" alt=""></a>
+	<footer class="page-footer container">
+		<div class="page-footer__inner row">
+			<div class="page-footer__address hidden-xs col-sm-3">г. Санкт-Петербург,<br>Приморское ш.600</div>
+			<div class="page-footer__logo-socials col-xs-12 col-sm-6">
+				<a href="#" class="logo"><img src="img/logo.png"></a>
 				<ul class="page-footer__socials">
-					<li class="page-footer__social-item"><a href="" class="page-footer__social-link  page-footer__social-link--vk-icon"></a></li>
-					<li class="page-footer__social-item"><a href="" class="page-footer__social-link  page-footer__social-link--inst-icon"></a></li>
-					<li class="page-footer__social-item"><a href="" class="page-footer__social-link  page-footer__social-link--fb-icon"></a></li>
+					<li class="page-footer__social-item"><a href="#" class="page-footer__social-link  page-footer__social-link--vk"></a></li>
+					<li class="page-footer__social-item"><a href="#" class="page-footer__social-link  page-footer__social-link--inst"></a></li>
+					<li class="page-footer__social-item"><a href="#" class="page-footer__social-link  page-footer__social-link--fb"></a></li>
 				</ul>
 			</div>
-			<div class="page-footer__contacts">+7 812 777-55-88<br><a href="mailto:info@greenvalley.ru">info@greenvalley.ru</a></div>
+			<div class="page-footer__contacts hidden-xs col-sm-3">+7 812 777-55-88<br><a href="mailto:info@greenvalley.ru">info@greenvalley.ru</a></div>
 		</div>
 	</footer>
 
