update include files

--- a/src/_html_include/footer.html
+++ b/src/_html_include/footer.html
@@ -1,14 +1,17 @@
-<footer class="page-footer container">
-	<div class="page-footer__inner row">
-		<div class="page-footer__address hidden-xs col-sm-3">г. Санкт-Петербург,<br>Приморское ш.600</div>
-		<div class="page-footer__logo-socials col-xs-12 col-sm-6">
-			<a href="#" class="logo"><img src="img/logo.png"></a>
-			<ul class="page-footer__socials">
-				<li class="page-footer__social-item"><a href="#" class="page-footer__social-link  page-footer__social-link--vk"></a></li>
-				<li class="page-footer__social-item"><a href="#" class="page-footer__social-link  page-footer__social-link--inst"></a></li>
-				<li class="page-footer__social-item"><a href="#" class="page-footer__social-link  page-footer__social-link--fb"></a></li>
-			</ul>
+	<footer class="page-footer container">
+		<div class="page-footer__inner row">
+			<div class="page-footer__address hidden-xs col-sm-3">г. Санкт-Петербург,<br>Приморское ш.600</div>
+			<div class="page-footer__logo-socials col-xs-12 col-sm-6">
+				<a href="#" class="logo"><img src="img/logo.png"></a>
+				<ul class="page-footer__socials">
+					<li class="page-footer__social-item"><a href="#" class="page-footer__social-link  page-footer__social-link--vk"></a></li>
+					<li class="page-footer__social-item"><a href="#" class="page-footer__social-link  page-footer__social-link--inst"></a></li>
+					<li class="page-footer__social-item"><a href="#" class="page-footer__social-link  page-footer__social-link--fb"></a></li>
+				</ul>
+			</div>
+			<div class="page-footer__contacts hidden-xs col-sm-3">+7 812 777-55-88<br><a href="mailto:info@greenvalley.ru">info@greenvalley.ru</a></div>
 		</div>
-		<div class="page-footer__contacts hidden-xs col-sm-3">+7 812 777-55-88<br><a href="mailto:info@greenvalley.ru">info@greenvalley.ru</a></div>
-	</div>
-</footer>
+	</footer>
+
+</body>
+</html>
