--- a/src/_html_include/header.html
+++ b/src/_html_include/header.html
@@ -1,19 +1,29 @@
-<header class="page-header">
-	<div class="page-header__inner container">
-		<div class="row">
-			<a href="#" class="logo col-xs-12 col-md-2"><img src="img/logo.png"></a>
-			<nav class="main-nav col-md-5">
-				<span id="menu-trigger" class="main-nav__hamburger visible-xs visible-sm"></span>
-				<ul class="main-nav__list hidden-xs hidden-sm">
-					<li class="main-nav__item"><a href="" class="main-nav__link">Номера</a></li>
-					<li class="main-nav__item"><a href="" class="main-nav__link">Коттедж</a></li>
-					<li class="main-nav__item"><a href="" class="main-nav__link">Ресторан</a></li>
-					<li class="main-nav__item"><a href="" class="main-nav__link">Отдых</a></li>
-					<li class="main-nav__item"><a href="" class="main-nav__link">Контакты</a></li>
-				</ul>
-			</nav>
-			<div class="page-header__contacts hidden-xs hidden-sm col-md-3"><strong>+7 812 777-55-88</strong><small>г. Санкт-Петербург, Приморское ш.600</small></div>
-			<a href="#" class="btn btn--calendar-icon hidden-xs hidden-sm col-md-2">Забронировать</a>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+	<meta charset="UTF-8">
+	<title>@@title</title>
+	<link rel="stylesheet" href="css/style.min.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
+
+	<header class="page-header">
+		<div class="page-header__inner container">
+			<div class="row">
+				<a href="#" class="logo col-xs-12 col-md-2"><img src="img/logo.png"></a>
+				<nav class="main-nav col-md-5">
+					<span id="menu-trigger" class="main-nav__hamburger visible-xs visible-sm"></span>
+					<ul class="main-nav__list hidden-xs hidden-sm">
+						<li class="main-nav__item"><a href="" class="main-nav__link">Номера</a></li>
+						<li class="main-nav__item"><a href="" class="main-nav__link">Коттедж</a></li>
+						<li class="main-nav__item"><a href="" class="main-nav__link">Ресторан</a></li>
+						<li class="main-nav__item"><a href="" class="main-nav__link">Отдых</a></li>
+						<li class="main-nav__item"><a href="" class="main-nav__link">Контакты</a></li>
+					</ul>
+				</nav>
+				<div class="page-header__contacts hidden-xs hidden-sm col-md-3"><strong>+7 812 777-55-88</strong><small>г. Санкт-Петербург, Приморское ш.600</small></div>
+				<a href="#" class="btn btn--calendar-icon hidden-xs hidden-sm col-md-2">Забронировать</a>
+			</div>
 		</div>
-	</div>
-</header>
+	</header>
