--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,4 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-	<meta charset="UTF-8">
-	<title>Index</title>
-	<link rel="stylesheet" href="css/style.min.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-<body>
-
-	@@include('_html_include/header.html')
+@@include('_html_include/header.html', {"title": "Главная"})
 
 	<section class="promo">
 		<div class="promo__wrapper-slides">
@@ -145,7 +135,4 @@
 		</div>
 	</section>
 
-	@@include('_html_include/footer.html')
-
-</body>
-</html>
+@@include('_html_include/footer.html')
