--- a/src/room_list.html
+++ b/src/room_list.html
@@ -1,28 +1,4 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-	<meta charset="UTF-8">
-	<title>Room List</title>
-</head>
-<body>
-
-	<header class="page-header">
-		<div class="page-header__inner">
-			<a href="" class="logo"><img src="" alt=""></a>
-			<nav class="main-nav">
-				<span id="menu-trigger" class="main-nav__hamburger"></span>
-				<ul class="main-nav__list">
-					<li class="main-nav__item"><a href="" class="main-nav__link">Номера</a></li>
-					<li class="main-nav__item"><a href="" class="main-nav__link">Коттедж</a></li>
-					<li class="main-nav__item"><a href="" class="main-nav__link">Ресторан</a></li>
-					<li class="main-nav__item"><a href="" class="main-nav__link">Отдых</a></li>
-					<li class="main-nav__item"><a href="" class="main-nav__link">Контакты</a></li>
-				</ul>
-			</nav>
-			<div class="page-header__contacts"><strong>+7 812 777-55-88</strong>г. Санкт-Петербург, Приморское ш.600</div>
-			<a href="" class="btn btn--icon-calendar">Забронировать</a>
-		</div>
-	</header>
+@@include('_html_include/header.html', {"title": "Room list"})
 
 	<section class="room-list-promo">
 		<div class="room-list-promo__inner">
@@ -72,20 +48,4 @@
 		</section>
 	</section>
 
-	<footer class="page-footer">
-		<div class="page-footer__inner">
-			<div class="page-footer__address">г. Санкт-Петербург,<br>Приморское ш.600</div>
-			<div class="page-footer__logo-socials">
-				<div class="page-footer__logo"></div>
-				<ul class="page-footer__socials">
-					<li class="page-footer__social-item"><a href="" class="page-footer__social-link  page-footer__social-link--vk-icon"></a></li>
-					<li class="page-footer__social-item"><a href="" class="page-footer__social-link  page-footer__social-link--inst-icon"></a></li>
-					<li class="page-footer__social-item"><a href="" class="page-footer__social-link  page-footer__social-link--fb-icon"></a></li>
-				</ul>
-			</div>
-			<div class="page-footer__contacts">+7 812 777-55-88<br><a href="mailto:info@greenvalley.ru">info@greenvalley.ru</a></div>
-		</div>
-	</footer>
-
-</body>
-</html>
+@@include('_html_include/footer.html')
