room-list-promo all done

--- a/src/room_list.html
+++ b/src/room_list.html
@@ -1,14 +1,14 @@
 @@include('_html_include/header.html', {"title": "Room list"})
 
 	<section class="room-list-promo">
-		<div class="room-list-promo__inner">
+		<div class="room-list-promo__inner container">
 			<h1 class="room-list-promo__title">Номера в отеле Green Valley</h1>
-			<p class="room-list-promo__text">Комфорт и живописный вид на Финский залив и сосновый парк.</p>
-			<p class="room-list-promo__text">4 этажа | 70 номеров</p>
+			<p class="room-list-promo__text hidden-xs">Комфорт и живописный вид на Финский залив и сосновый парк.</p>
+			<p class="room-list-promo__text hidden-xs">4 этажа | 70 номеров</p>
 		</div>
 	</section>
 
-	<section class="room-list-category">
+	<section class="room-list-category container">
 		<h1 class="room-list-category__title">Категории</h1>
 		<section class="room-list-item">
 			<div class="room-list-item__content">
