single-room-other-category all done

--- a/src/single_room.html
+++ b/src/single_room.html
@@ -42,18 +42,35 @@
 	</article>
 
 	<section class="single-room-other-category">
-		<div class="single-room-other-category__inner">
-			<div class="single-room-other-category__card">
-				<img src="" alt="">
-				<div class="single-room-other-category__card-text"><strong>Стандарт</strong>от <span>4000</span> руб./сутки</div>
-			</div>
-			<div class="single-room-other-category__card">
-				<img src="" alt="">
-				<div class="single-room-other-category__card-text"><strong>Стандарт</strong>от <span>4000</span> руб./сутки</div>
-			</div>
-			<div class="single-room-other-category__card">
-				<img src="" alt="">
-				<div class="single-room-other-category__card-text"><strong>Стандарт</strong>от <span>4000</span> руб./сутки</div>
+		<div class="single-room-other-category__inner container">
+			<div class="row">
+				<div class="col-xs-12 col-sm-6 col-md-4">
+					<div class="single-room-other-category__card">
+						<a href="#" class="single-room-other-category__link"></a>
+						<div class="single-room-other-category__img">
+							<img src="img/room-list-standart.jpg">
+						</div>
+						<div class="single-room-other-category__card-text"><strong>Стандарт</strong>от <span>4000</span> руб./сутки</div>
+					</div>
+				</div>
+				<div class="col-xs-12 col-sm-6 col-md-4">
+					<div class="single-room-other-category__card">
+						<a href="#" class="single-room-other-category__link"></a>
+						<div class="single-room-other-category__img">
+							<img src="img/room-list-standart-plus.jpg">
+						</div>
+						<div class="single-room-other-category__card-text"><strong>Стандарт+</strong>от <span>4500</span> руб./сутки</div>
+					</div>
+				</div>
+				<div class="col-xs-12 hidden-sm col-sm-6 col-md-4">
+					<div class="single-room-other-category__card">
+						<a href="#" class="single-room-other-category__link"></a>
+						<div class="single-room-other-category__img">
+							<img src="img/room-list-lux.jpg">
+						</div>
+						<div class="single-room-other-category__card-text"><strong>Люкс</strong>от <span>5700</span> руб./сутки</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
