booking-top all done

--- a/src/form.html
+++ b/src/form.html
@@ -1,6 +1,6 @@
 @@include('_html_include/header.html', {"title": "Form"})
 
-	<section class="booking-top">
+	<section class="booking-top container">
 		<h1>Бронирование</h1>
 		<p>Чтобы забронировать номер в отеле или коттедж, заполните форму ниже или просто позвоните по телефону: <span>+7 812 777-55-88</span></p>
 	</section>
