--- a/src/form.html
+++ b/src/form.html
@@ -13,7 +13,7 @@
 				<div class="row">
 					<div class="booking-form__date col-xs-12 col-sm-6">
 						<label>
-							<label for="entry-day">Дата въезда</label>
+							<span for="entry-day">Дата въезда</span>
 							<div class="booking-form__date-wrapper">
 								<input type="number" placeholder="дд" min="0" max="31" name="entry-day" id="entry-day">
 								<input type="number" placeholder="мм" min="0" max="12" name="entry-month">
@@ -23,7 +23,7 @@
 					</div>
 					<div class="booking-form__date col-xs-12 col-sm-6">
 						<label>
-							<label for="exit-day">Дата выезда</label>
+							<span for="exit-day">Дата выезда</span>
 							<div class="booking-form__date-wrapper">
 								<input type="number" placeholder="дд" min="0" max="31" name="exit-day" id="exit-day">
 								<input type="number" placeholder="мм" min="0" max="12" name="exit-month">
@@ -39,18 +39,18 @@
 			<span class="booking-step__step-count">Шаг 2</span>
 			<h2 class="booking-step__title">Место проживания</h2>
 			<div class="booking-step__inner  boking-step__inner--narrow">
-				<div class="booking-step__location">
+				<div class="booking-form__location">
 					<label>
 						<input type="radio" name="location" value="Отель" checked>
-						<h3 class="booking-step__location-title">Отель</h3>
-						<i class="booking-step__icon-hotel"></i>
+						<h3 class="booking-form__location-title">Отель</h3>
+						<i class="booking-form__icon-hotel"></i>
 					</label>
 				</div>
-				<div class="booking-step__location">
+				<div class="booking-form__location">
 					<label>
 						<input type="radio" name="location" value="Коттедж">
-						<h3 class="booking-step__location-title">Коттедж</h3>
-						<i class="booking-step__icon-cottage"></i>
+						<h3 class="booking-form__location-title">Коттедж</h3>
+						<i class="booking-form__icon-cottage"></i>
 					</label>
 				</div>
 			</div>
