--- a/src/form.html
+++ b/src/form.html
@@ -135,7 +135,7 @@
 						</div>
 					</div>
 					<div class="col-xs-12">
-						<button class="btn btn--green">Забронировать</button>
+						<button class="btn btn--green btn--square">Забронировать</button>
 					</div>
 				</div>
 			</div>
