--- a/src/form.html
+++ b/src/form.html
@@ -124,7 +124,7 @@
 									<p class="hidden-xs">Прямо сейчас вы можете произвести оплату с помощью банковской карты.</p>
 								</label>
 								<div class="booking-form__payment-method-input-inner col-xs-12 col-sm-8"><label>Номер карты<input type="number" name="card-number" placeholder="0000-0000-0000-0000"></label></div>
-								<div class="booking-form__payment-method-input-inner col-xs-12 col-sm-4"><label>Код CvV<input type="number" name="card-cvv" maxlength="3" placeholder="123"><a href="#" class="tooltip"><span class="tooltip__text visible-lg">Поясняющий текст</span></a></label></div>
+								<div class="booking-form__payment-method-input-inner col-xs-12 col-sm-4"><label>Код CvV<a href="javascript:void(0);" class="tooltip hidden-xs hidden-sm"><span class="tooltip__text">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты.</span></a><input type="number" name="card-cvv" maxlength="3" placeholder="123"></label></div>
 								<div class="booking-form__payment-method-input-inner col-xs-12 col-sm-8"><label>Фамилия владельца карты<input type="text" name="card-name" placeholder="Vladimir Vladimirov"></label></div>
 								<div class="booking-form__payment-method-input-inner col-xs-12 col-sm-4"><label>Действует до<input type="text" name="card-date" placeholder="01 / 2018"></label></div>
 								<div class="clearfix"></div>
