add js-concat js-uglify and clean, add jquery owl

--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,10 @@
 		</div>
 	</section>
 
-	<section class="gallery"></section>
+	<section class="gallery container">
+		<div class="gallery__main"><img src="http://fakeimg.pl/1180x500/00CED1/FFF/?text=img+placeholder" alt="" class="gallery__main-img"></div>
+		<div class="gallery__thumbs"></div>
+	</section>
 
 	<section class="review">
 		<div class="review__inner container">
